Fix z-index for Cover block inside editor

--- a/src/scss/blocks/core/cover/_common.scss
+++ b/src/scss/blocks/core/cover/_common.scss
@@ -99,7 +99,6 @@ $enable-cover-block-styles:             true !default;
     //.wp-block-cover__inner-container,
     .wp-block-cover > * {
         position: relative;
-        z-index: 300;
     }
 
     .wp-block-cover__video-background {
